docs/api/qiskit/2.4/qiskit.transpiler.passes.SubstitutePi4Rotations.mdx
---
title: SubstitutePi4Rotations (v2.4)
description: API reference for qiskit.transpiler.passes.SubstitutePi4Rotations in qiskit v2.4
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.SubstitutePi4Rotations
---

# SubstitutePi4Rotations

<Class id="qiskit.transpiler.passes.SubstitutePi4Rotations" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/substitute_pi4_rotations.py#L21-L95" signature="qiskit.transpiler.passes.SubstitutePi4Rotations(*args, **kwargs)" modifiers="class">
  Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Convert rotation gates whose angles are integer multiples of $\pi/4$ into discrete sets of Clifford, [`TGate`](qiskit.circuit.library.TGate "qiskit.circuit.library.TGate") and [`TdgGate`](qiskit.circuit.library.TdgGate "qiskit.circuit.library.TdgGate") gates.

  For single-qubit rotation gates ([`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate"), [`RYGate`](qiskit.circuit.library.RYGate "qiskit.circuit.library.RYGate"), [`RZGate`](qiskit.circuit.library.RZGate "qiskit.circuit.library.RZGate"), [`PhaseGate`](qiskit.circuit.library.PhaseGate "qiskit.circuit.library.PhaseGate")) and two-qubit rotation gates ([`RXXGate`](qiskit.circuit.library.RXXGate "qiskit.circuit.library.RXXGate"), [`RYYGate`](qiskit.circuit.library.RYYGate "qiskit.circuit.library.RYYGate"), [`RZZGate`](qiskit.circuit.library.RZZGate "qiskit.circuit.library.RZZGate"), [`RZXGate`](qiskit.circuit.library.RZXGate "qiskit.circuit.library.RZXGate")), when the angle is a multiple of $\pi/4$, the decomposition requires a single [`TGate`](qiskit.circuit.library.TGate "qiskit.circuit.library.TGate") or [`TdgGate`](qiskit.circuit.library.TdgGate "qiskit.circuit.library.TdgGate") gate as well as some Clifford gates. For two-qubit controlled rotation gates ([`CPhaseGate`](qiskit.circuit.library.CPhaseGate "qiskit.circuit.library.CPhaseGate"), [`CRXGate`](qiskit.circuit.library.CRXGate "qiskit.circuit.library.CRXGate"), [`CRYGate`](qiskit.circuit.library.CRYGate "qiskit.circuit.library.CRYGate"), [`CRZGate`](qiskit.circuit.library.CRZGate "qiskit.circuit.library.CRZGate")), when the angle is a multiple of $\pi/2$, the decomposition requires three [`TGate`](qiskit.circuit.library.TGate "qiskit.circuit.library.TGate") or [`TdgGate`](qiskit.circuit.library.TdgGate "qiskit.circuit.library.TdgGate") gates for [`CPhaseGate`](qiskit.circuit.library.CPhaseGate "qiskit.circuit.library.CPhaseGate") and two otherwise, as well as some Clifford gates. Note that even multiples of $\pi/4$ (respectively, $\pi/2$ for controlled rotations), or equivalently, integer multiples of $\pi/2$ (respectively $\pi$ for controlled rotations) can be written using only Clifford gates.

  For example:

  ```python
  from qiskit.circuit import QuantumCircuit
  from qiskit.transpiler.passes import SubstitutePi4Rotations
  from qiskit.quantum_info import Operator

  # The following quantum circuit consists of 5 Clifford gates,
  # four rotation gates whose angles are integer multiples of pi/4,
  # and one controlled rotation gate whose angle is an integer multiple of pi/2

  qc = QuantumCircuit(3)
  qc.cx(0, 1)
  qc.rz(pi/4, 0)
  qc.cz(0, 1)
  qc.rx(3*pi/4, 1)
  qc.h(1)
  qc.s(2)
  qc.ry(2*pi/4, 2)
  qc.cz(2, 0)
  qc.rzz(pi/4, 0, 2)
  qc.cry(3*pi/2, 2, 1)

  # The transformed circuit consists of Clifford, T and Tdg gates
  qct = SubstitutePi4Rotations()(qc)
  clifford_t_names = get_clifford_gate_names() + ["t"] + ["tdg"]
  assert(set(qct.count_ops().keys()).issubset(set(clifford_t_names)))

  # The circuits before and after the transformation are equivalent
  assert Operator(qc) == Operator(qct)
  ```

  **Parameters**

  **approximation\_degree** – Used in the tolerance computations. This gives the threshold for the average gate fidelity.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.SubstitutePi4Rotations.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.SubstitutePi4Rotations.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.SubstitutePi4Rotations.execute" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L161-L180" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any)) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable) *| None*) – A callback function which is called per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any), [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.SubstitutePi4Rotations.name" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/passmanager/base_tasks.py#L67-L69" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str)
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.SubstitutePi4Rotations.run" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/passes/optimization/substitute_pi4_rotations.py#L79-L95" signature="run(dag)">
    Run the Substitute Pi4-Rotations optimization pass on `dag`.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")) – the input DAG.

    **Returns**

    The output DAG.

    **Return type**

    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.SubstitutePi4Rotations.update_status" github="https://github.com/Qiskit/qiskit/tree/stable/2.4/qiskit/transpiler/basepasses.py#L182-L190" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

